tests/negative/UnexpectedFieldUpdate.juvix
module UnexpectedFieldUpdate;

type T := t;

type R := mkR {
 r : T;
};

f : R := (mkR t) @R{x := 1};
